--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,1 +1,8 @@
-<h1>AEPi Australia</h1>
+<div class="home">
+  {%- if page.title -%}
+    <h1 class="page-heading">{{ page.title }}</h1>
+  {%- endif -%}
+
+  {{ content }}
+
+</div>
