--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+</head>
+
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
