Added page links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,10 @@
 
 <div class="navbar">
     <img class="logo" src="{{ page.relativity }}/res/logo.png">
-    <a href="#" class="nav-link">Home</a>
-    <a href="#" class="nav-link">About Us</a>
-    <a href="#" class="nav-link">Blog</a>
-    <a href="#" class="nav-link">Contact Us</a>
+    <a href="{{ page.relativity }}/" class="nav-link">Home</a>
+    <a href="{{ page.relativity }}/about" class="nav-link">About Us</a>
+    <a href="{{ page.relativity }}/blog" class="nav-link">Blog</a>
+    <a href="{{ page.relativity }}/contact" class="nav-link">Contact Us</a>
 </div>
 
 <div class="content">
