--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ a:hover {
 }
 
 .title-bar-content {
-    width: 70%;
+    display: flex;
 }
 
 .page-heading {
@@ -65,6 +65,12 @@ a:hover {
 
 .page-heading {
     font-size: 60px;
+}
+
+.big-logo {
+    height: 200px;
+    padding-bottom: 20px;
+    padding-top: 10px;
 }
 
 
@@ -77,8 +83,22 @@ a:hover {
 .content {
     padding-left: 10%;
     padding-right: 10%;
+    font-family: Arial;
+    color: #1a1a1a;
 }
 
+
+
+
+
+.button-link {
+    background-color: #1f3849;
+    border-color: #1f3849;
+    border-radius: 10px;
+    padding: 10px;
+    color: whitesmoke;
+    text-decoration: none;
+}
 
 
 
@@ -100,4 +120,38 @@ a:hover {
 
 .instagram-link {
     color: #e95950;
+}
+
+
+
+
+
+.blog-card {
+    margin: 0 auto;
+    width: 70%;
+    border-bottom: 2px #1f3849 solid;
+    padding-bottom: 10px;
+}
+
+
+.blog-image {
+    width: 100%;
+    height: 200px;
+    background-position: top;
+    background-size: cover;
+    margin: 0 auto;
+}
+
+.image-full {
+    margin-top: 10px;
+    height: 350px;
+}
+
+.blog-text {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.blog-text p {
+    font-family: Times;
 }
