--- a/css/styles.css
+++ b/css/styles.css
@@ -177,8 +177,9 @@ a:hover {
 .home-social {
     flex: 0 0 30%;
     padding-top: 40px;
+    text-align: center;
 }
 
 .home-social iframe {
-    padding-left: 20px;
+    padding-left: 30px;
 }
