--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{{ page.relativity }}/css/styles.css">
-    <link rel="shortcut icon" type="image/png" href="{{ page.relativity }}/res/favicon.ico">
+    <link rel="shortcut icon" type="image/png" >
+    <link rel="shortcut icon" href="{{ page.relativity }}/res/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ page.relativity }}/res/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <title>AEPi Sydney {{ page.action }}</title>
 </head>
