Made navbar responsive

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AEPi Sydney {{ page.action }}</title>
 </head>
-
-<div class="navbar gold-text">
-    <a href="{{ page.relativity }}/" class="nav-link">
+<div class="navbar">
+    <a href="{{ page.relativity }}/">
         <img class="logo" src="{{ page.relativity }}/res/logo.png">
     </a>
-    <a href="{{ page.relativity }}/" class="nav-link">Home</a>
-    <a href="{{ page.relativity }}/about" class="nav-link">About Us</a>
-    <a href="{{ page.relativity }}/blog" class="nav-link">Blog</a>
-    <a href="{{ page.relativity }}/contact" class="nav-link">Contact Us</a>
+    <div class="nav-links gold-text">
+        <a href="{{ page.relativity }}/" class="nav-link">Home</a>
+        <a href="{{ page.relativity }}/about" class="nav-link">About Us</a>
+        <a href="{{ page.relativity }}/blog" class="nav-link">Blog</a>
+        <a href="{{ page.relativity }}/contact" class="nav-link">Contact Us</a>
+    </div>
 </div>
 <div class="title-bar">
     <div class="title-bar-content gold-text">
