--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ a:hover {
 
 
 .map-frame {
-    width: 50%;
+    width: 90%;
 }
 
 
@@ -217,7 +217,32 @@ a:hover {
 }
 
 
+
+
+.about-section {
+    display: flex;
+}
+.about-section-text {
+    flex: 1 0 70%;
+}
+.about-section-image-container {
+    flex: 0 0 30%;
+}
+.about-section-image {
+    margin-top: 20px;
+    width: 100%;
+}
+.image-caption {
+    font-size: 12px;
+    margin-top: 2px;
+    font-weight: bold;
+}
+
+
+
+
 @media only screen and (max-width: 1100px) {
+    /* Global Styles */
     .content {
         padding-left: 20px;
         padding-right: 20px;
@@ -276,6 +301,12 @@ a:hover {
     }
 
     /* About Page Styles */
+    .about-section {
+        flex-direction: column;
+    }
+    .about-section-image {
+        margin-top: 0px;
+    }
     .map-frame {
         width: 100%;
     }
@@ -288,5 +319,8 @@ a:hover {
     /* Contact Page Styles */
     .contact-links {
         flex-direction: column;
+    }
+    .contact-link {
+        flex: none;
     }
 }
