Commented and formatted styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* Global Styles */
 body {
     background-color: whitesmoke;
     margin: 0 auto;
@@ -14,7 +15,26 @@ body {
 a:hover {
     opacity: 0.9;
 }
+.content {
+    padding-left: 10%;
+    padding-right: 10%;
+    font-family: Arial;
+    color: #1a1a1a;
+}
+.button-link {
+    background-color: #1f3849;
+    border-color: #1f3849;
+    border-radius: 10px;
+    padding: 10px;
+    color: whitesmoke;
+    text-decoration: none;
+}
 
+
+
+
+
+/* Navbar Styles */
 .navbar {
     background-color: #27475c;
     position: fixed;
@@ -54,6 +74,9 @@ a:hover {
 
 
 
+
+
+/* Title Bar Styles */
 .title-bar {
     background-color: #1f3849;
     padding-left: 10%;
@@ -87,39 +110,7 @@ a:hover {
 
 
 
-
-.content {
-    padding-left: 10%;
-    padding-right: 10%;
-    font-family: Arial;
-    color: #1a1a1a;
-}
-
-
-
-
-
-.button-link {
-    background-color: #1f3849;
-    border-color: #1f3849;
-    border-radius: 10px;
-    padding: 10px;
-    color: whitesmoke;
-    text-decoration: none;
-}
-
-
-
-
-.map-frame {
-    width: 90%;
-}
-
-
-
-
-
-
+/* Contact Page Styles */
 .social-link {
     padding: 10px;
     text-decoration: none;
@@ -136,11 +127,28 @@ a:hover {
 .instagram-link {
     color: #e95950;
 }
+.contact-links {
+    margin-top: 30px;
+    display: flex;
+    text-align: center;
+}
+
+
+.contact-link {
+    flex: 1 0 30%;
+}
+
+
+.contact-icon {
+    font-size: 300%;
+}
 
 
 
 
 
+
+/* Blog Page Styles */
 .blog-card-full {
     margin: 0 auto;
     width: 100%;
@@ -154,7 +162,6 @@ a:hover {
     border-bottom: 2px #1f3849 solid;
     padding-bottom: 10px;
 }
-
 
 .blog-image {
     width: 100%;
@@ -180,7 +187,7 @@ a:hover {
 
 
 
-
+/* Home Page Styles */
 .home-container {
     display: flex;
 }
@@ -200,25 +207,8 @@ a:hover {
 }
 
 
-.contact-links {
-    margin-top: 30px;
-    display: flex;
-    text-align: center;
-}
 
-
-.contact-link {
-    flex: 1 0 30%;
-}
-
-
-.contact-icon {
-    font-size: 300%;
-}
-
-
-
-
+/* About Page Styles */
 .about-section {
     display: flex;
 }
@@ -236,6 +226,9 @@ a:hover {
     font-size: 12px;
     margin-top: 2px;
     font-weight: bold;
+}
+.map-frame {
+    width: 90%;
 }
 
 
