--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,10 @@ a:hover {
     padding-bottom: 10px;
 }
 
+.blog-card-bottomless {
+    border-bottom: none;
+}
+
 .blog-image {
     width: 100%;
     height: 200px;
